Tue Jul 16 21:46:03 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: revert r42008. strcasecmp() uses the current locale.

	* include/ruby/ruby.h: ditto.

	* st.c (st_strcasecmp): ditto.

Tue Jul 16 21:07:04 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: check strcasecmp().

	* include/ruby/ruby.h: use strcasecmp() as st_strcasecmp() if it
	  exists.

	* st.c (st_strcasecmp): define the function only if strcasecmp()
	  doesn't exist.

Tue Jul 16 20:21:28 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigsq): Renamed from bigsqr.

Tue Jul 16 19:42:08 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (USHORT): Unused macro removed.

Tue Jul 16 19:18:51 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: slim a path of newobj_of().

	* gc.c (objspace): add a new field objspace::freelist, which contains
	  available RVALUEs.

	* gc.c (newobj_of): simply call new function `get_freeobj()'.
	  get_freeobj() returns objspace::freelist. If  objspace::freelist
	  is not available, refill objspace::freelist with a slot pointed by
	  objspace::heap::free_slots.

	* gc.c (before_gc_sweep): clear objspace::freelist.

	* gc.c (slot_sweep): clear slot::freelist.

	* gc.c (heaps_prepare_freeslot): renamed to heaps_prepare_freeslot.

	* gc.c (unlink_free_heap_slot): remove unused function.

	* gc.c (rb_free_const_table): remove unused function.

Tue Jul 16 19:05:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_shift3): Big shift width is not a problem for right
	  shift.

Tue Jul 16 18:50:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_count): [DOC] fix typo.  Array#count uses ==, not
	  ===.  a question at asakusa.rb ML.

Tue Jul 16 18:35:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_karatsuba): Avoid duplicate calculation when
	  squaring.
	  (bary_mul_toom3_branch): Ditto.

Tue Jul 16 17:43:22 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (link_free_heap_slot): removed.
